--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,8 @@
 
 
 
-body {
+/* body {
     background-image: url(/src/assets/img.jpg);
     background-repeat: no-repeat;
     width: 100%;
-}
+} */
